# pg-todoist

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  env.sample  history.md  pyproject.toml
.github/workflows/: ecr-push.yml  python-ci.yml
api/: Dockerfile  Dockerfile.aws  db.py  environ.py  main.py  migrate_db.py  session.py
api/core/: environ.py  logging.py
api/cruds/: task.py
api/db/: connection.py
api/db/queries/: dones.py  tasks.py
api/db/repositories/: done.py  dones.py  task.py  tasks.py
api/dependencies/: db.py
api/domain/models/: task.py
api/infra/: __init__.py
api/infra/db/: connection.py
api/infra/routers/: __init__.py  done.py  dones.py  health.py  task.py  tasks.py
api/interfaces/controllers/: dones.py  tasks.py
api/interfaces/db/queries/: dones.py  tasks.py
api/interfaces/db/repositories/: base.py  dones.py  tasks.py
api/interfaces/schemas/: done.py  task.py
api/models/: task.py
api/routers/: done.py  task.py
api/schemas/: task.py
api/usecases/: dones.py  tasks.py
db/: client.py  pg_client.py  testdb_client.py
migrations/: env.py
migrations/versions/: 5f9053daa6ea_1_create_custom_schema_and_db.py  81052877c664_1_create_todoist_schema.py  882759e705fc_2_create_tasks_and_dones_table.py  b430a6422cda_2_add_status_type_column.py  e5cc805f99e4_1_create_tasks_and_dones_table.py  fcb57c921834_3_create_todoist_schema.py
tests/: conftest.py  test_data.json  test_dones.py  test_health.py  test_main.py  test_tasks.py
