[tool.poetry]
name = "app-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
SQLAlchemy = "^1.4.28"
databases = "^0.5.3"
asyncpg = "^0.25.0"
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.16.0"
aiosqlite = "^0.17.0"
httpx = "^0.21.1"
psycopg2 = "^2.9.3"
black = "^21.12b0"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "-p no:unraisableexception"
testpaths = ["tests",]
filterwarnings = ["ignore::DeprecationWarning",]