[tool.poetry]
name = "ToDoIst API"
version = "0.1.0"
description = "RESTful API for ToDoIst App"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.74.1"
uvicorn = {extras = ["latest"], version = "^0.19.0"}
SQLAlchemy = "^1.4.31"
databases = {extras = ["latest"], version = "^0.5.4"}
asyncpg = {extras = ["latest"], version = "^0.25.0"}
alembic = {extras = ["latest"], version = "^1.7.5"}

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.18.1"
httpx = "^0.22.0"
psycopg2 = {extras = ["latest"], version = "^2.9.3"}
black = "^22.1.0"
flake8 = {extras = ["latest"], version = "^4.0.1"}
pytest-cov = {extras = ["latest"], version = "^3.0.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "-p no:unraisableexception"
testpaths = ["tests",]
filterwarnings = ["ignore::DeprecationWarning",]